src : Google OAuth setup
setup passport.js
setup Google OAuth strategy
setup google project and API keys
secure API keys in config

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Shashank katte",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
