--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Shashank katte",
   "license": "MIT",
   "dependencies": {
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7",
