--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^8.142.0"
   }
 }
