--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Shashank katte",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "concurrently": "^6.0.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
@@ -24,6 +25,7 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "sendgrid": "^5.2.3",
     "stripe": "^8.142.0"
   }
 }
