--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "concurrently": "^6.0.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "path-parser": "^6.1.0",
     "sendgrid": "^5.2.3",
     "stripe": "^8.142.0"
   }
